@@ -1,3 +1,10 @@
+2011-04-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Update dox for document_compare_by_display_name() with warning
+   about parameter addresses.
+
+
 2011-04-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/document.c:
